--- a/apps/ai-market/src/styles/globals.css
+++ b/apps/ai-market/src/styles/globals.css
@@ -60,3 +60,9 @@ body {
     box-shadow: 0px 0px 8px rgba(57, 255, 20, 0.8);
   }
 }
+
+::selection {
+  background-color: #ff00ff;
+  color: white;
+  text-shadow: 0 0 10px #ff00ff, 0 0 20px #ff00ff, 0 0 30px #ff00ff;
+}
